[package]
name = "bbolt-rs"
version = "1.3.8"
edition = "2021"
license-file = "LICENSE"
categories = ["command-line-utilities", "database-implementations"]
keywords = ["cli", "bbolt", "database", "db"]
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Until the aligners miri fix is in crates.io depend on the git main branch
aligners = {git = "https://github.com/V0ldek/aligners.git"}
bumpalo = { version = "3.16", features = ["collections", "allocator-api2"]}
hashbrown = "0.14.5"
memmap2 = "0.9.4"
page_size = "0.6.0"
itertools = "0.12.1"
bytemuck = { version = "1.15", features = ["derive"] }
size = "0.4.1"
getset = "0.1.2"
once_cell = "1.19.0"
fnv_rs = "0.4.3"
thiserror = "1.0.60"
anyhow = "1.0.83"
fs4 = { version = "0.8.2", features = ["sync"] }
parking_lot = "0.12.2"
aliasable = "0.1.3"
pin-project = "1.1.5"
typed-builder = "0.18.2"
rand = "0.8.5"
tempfile = "3.10"
clap = { version = "4.5.4", features = ["derive"] }
byteorder = "1.5.0"
monotonic-timer = "1.0.0"
document-features = "0.2.8"

[features]
#! ### Stable features

## Enable working with Go Bolt databases
compat = []

## Run database check after each commit
strict = []

## Run long tests
long-tests = []

## Run tests using the memory backend
test-mem-backend = []

#! ### Experimental features
#! The following features are experimental

## Disables `RefCell` runtime memory guarantees. No performance gain.
##
## ⚠️Unit tests should prevent undefined behavior, but you're on your own!

allgasnobrakes = []

## Enable `try` family of functions. Transactions wrapped in `Option` instead of blocking
try-begin = []

[dev-dependencies]

[build-dependencies]
cfg_aliases = "0.2.0"

[profile.release]
debug = false
lto = "thin"

[profile.bench]
debug = true
