[package]
name = "bbolt-rs"
version = "1.3.10"
edition = "2021"
license-file = "LICENSE"
categories = ["command-line-utilities", "database-implementations"]
keywords = ["cli", "bbolt", "database", "db"]
rust-version = "1.76"
description = "A Rust port of the Bolt database"
repository = "https://github.com/ambaxter/bbolt-rs"
documentation = "https://docs.rs/bbolt-rs/latest/bbolt_rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# There's no SIMD support for aarch64 yet
[target.'cfg(target_arch = "aarch64")'.dependencies]
aligners = { version = "0.0.10", default-features = false }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
aligners = "0.0.10"

[dependencies]
# Until the aligners miri fix is in crates.io depend on the git main branch
# Swap 0.0.10 for the git version to run the miri test
# aligners = {git = "https://github.com/V0ldek/aligners.git"}
bumpalo = { version = "3.16", features = ["collections", "allocator-api2"]}
hashbrown = "0.14.5"
memmap2 = "0.9.4"
page_size = "0.6.0"
itertools = "0.13.0"
bytemuck = { version = "1.18", features = ["derive"] }
size = "0.4.1"
getset = "0.1.3"
once_cell = "1.19.0"
fnv_rs = "0.4.3"
thiserror = "1.0.63"
anyhow = "1.0.89"
fs4 = { version = "0.9", features = ["sync"] }
parking_lot = "0.12.3"
aliasable = "0.1.3"
pin-project = "1.1.5"
typed-builder = "0.20"
rand = "0.8.5"
tempfile = "3.12"
clap = { version = "4.5", features = ["derive"] }
byteorder = "1.5.0"
monotonic-timer = "1.0.0"
document-features = "0.2.10"
fake = { version = "2.9.2", features = ["derive"] }
log = "0.4.22"
# only for testing


[features]
#! ### Stable features

## Enable working with Go Bolt databases
compat = []

## Run database check after each commit
strict = []

## Run long tests
long-tests = []

## Run tests using the memory backend
test-mem-backend = []

#! ### Experimental features
#! The following features are experimental

## Disables `RefCell` runtime memory guarantees. No performance gain.
##
## ⚠️Unit tests should prevent undefined behavior, but you're on your own!
allgasnobrakes = []

## Enable `try` family of functions. Transactions wrapped in `Option` instead of blocking
try-begin = []

[dev-dependencies]

[build-dependencies]
cfg_aliases = "0.2.0"

[profile.release]
debug = false
lto = "thin"

[profile.bench]
debug = true
